--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@strategic-dot/components": "^0.0.28",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/jest-axe": "^3.5.9",
     "framer-motion": "^11.3.8",
