fix: prettier error

--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "test:ui": "vitest --ui",
     "test:update": "vitest --update",
     "test:ci": "vitest --coverage",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,mdx}\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@strategic-dot/components": "^0.0.28",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/jest-axe": "^3.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
     "jest-axe": "^9.0.0",
     "lenis": "^1.1.6",
@@ -65,9 +65,9 @@
     "eslint-plugin-unicorn": "^54.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-plugin-vitest": "^0.4.1",
-    "lint-staged": "13.2.3",
-    "husky": "8.0.3",
+    "husky": "^9.1.5",
     "jsdom": "^24.1.0",
+    "lint-staged": "13.2.3",
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
