--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@keyvaluesystems/react-stepper": "^1.0.4",
-    "@strategic-dot/components": "^0.0.55-beta",
+    "@strategic-dot/components": "^0.0.56-beta",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/jest-axe": "^3.5.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
+    "google-map-react": "^2.2.1",
     "jest-axe": "^9.0.0",
     "lenis": "^1.1.6",
     "lucide-react": "^0.400.0",
@@ -47,6 +48,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/google-map-react": "^2.1.10",
     "@types/node": "^20.14.12",
     "@types/prop-types": "^15.7.12",
     "@types/react": "^18.3.3",
