--- a/package.json
+++ b/package.json
@@ -7,78 +7,82 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:update": "vitest --update",
-    "test:ci": "vitest --coverage",
+    "lint": "next lint",
+    "c:test": "cypress open",
+    "v:test": "vitest",
+    "v:test:ui": "vitest --ui",
+    "v:test:update": "vitest --update",
+    "V:test:ci": "vitest --coverage",
     "prepare": "husky",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,js,jsx,mdx}\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@keyvaluesystems/react-stepper": "^1.0.4",
-    "@strategic-dot/components": "^0.0.79-beta",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@strategic-dot/components": "^0.0.80-beta",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@types/jest-axe": "^3.5.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.8",
+    "framer-motion": "^11.11.8",
     "google-map-react": "^2.2.1",
     "jest-axe": "^9.0.0",
-    "lenis": "^1.1.6",
-    "lucide-react": "^0.400.0",
+    "lenis": "^1.1.14",
+    "lucide-react": "^0.452.0",
     "moment": "^2.30.1",
-    "next": "14.2.6",
-    "next-nprogress-bar": "^2.3.13",
+    "next": "14.2.15",
+    "next-nprogress-bar": "^2.3.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
-    "sharp": "^0.33.4",
-    "swiper": "^11.1.5",
-    "tailwind-merge": "^2.3.0",
+    "sharp": "^0.33.5",
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@mertasan/tailwindcss-variables": "^2.7.0",
-    "@testing-library/dom": "^10.3.1",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/google-map-react": "^2.1.10",
-    "@types/node": "^20.14.12",
-    "@types/prop-types": "^15.7.12",
-    "@types/react": "^18.3.3",
+    "@types/node": "^22.7.5",
+    "@types/prop-types": "^15.7.13",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-istanbul": "^1.6.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-unicorn": "^54.0.0",
-    "eslint-plugin-unused-imports": "^3.2.0",
-    "eslint-plugin-vitest": "^0.4.1",
-    "husky": "^9.1.5",
-    "jsdom": "^24.1.0",
-    "lint-staged": "13.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^2.1.2",
+    "@vitest/ui": "^2.1.2",
+    "cypress": "^13.15.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.9",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import-helpers": "1.3.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "7.35.2",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-testing-library": "6.3.0",
+    "eslint-plugin-unicorn": "^56.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-vitest": "^0.5.4",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
+    "lint-staged": "15.2.10",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.4",
-    "vitest": "^1.6.0"
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,scss,md}": [
