--- a/.github/workflows/checks.PR.yml
+++ b/.github/workflows/checks.PR.yml
@@ -15,13 +15,14 @@ jobs:
         with:
           version: 9
       - run: pnpm install
-      - name: "Test"
-        run: pnpm run test:ci -- --max-warnings 0
+      - name: "Run Tests"
+        run: pnpm run v:test:ci -- --max-warnings 0
       - name: "Upload Coverage"
         uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: coverage
+
   eslint:
     runs-on: ubuntu-latest
     steps:
@@ -33,6 +34,8 @@ jobs:
         with:
           version: 9
       - run: pnpm install
+      - name: "Run ESLint"
+        run: pnpm run lint
       - uses: reviewdog/action-eslint@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
