--- a/.github/workflows/checks.PR.yml
+++ b/.github/workflows/checks.PR.yml
@@ -36,8 +36,8 @@ jobs:
       - run: pnpm install
       - name: "Run ESLint"
         run: pnpm run lint
-      - uses: reviewdog/action-eslint@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          fail_on_error: true
-          eslint_flags: ". --ext js,jsx,ts,tsx --ignore-path=.gitignore --max-warnings 0"
+      # - uses: reviewdog/action-eslint@v1
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     fail_on_error: true
+      #     eslint_flags: ". --ext js,jsx,ts,tsx --ignore-path=.gitignore --max-warnings 0"
