--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@keyvaluesystems/react-stepper": "^1.0.4",
-    "@strategic-dot/components": "^0.0.80-beta",
+    "@strategic-dot/components": "^0.0.82-beta",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@types/jest-axe": "^3.5.9",
     "class-variance-authority": "^0.7.0",
@@ -40,6 +40,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "tsa-web": "file:",
     "zod": "^3.23.8",
     "zustand": "5.0.0-rc.2"
   },
