--- a/.github/workflows/checks.PR.yml
+++ b/.github/workflows/checks.PR.yml
@@ -11,12 +11,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - run: pnpm install
+      - run: npm install
       - name: "Run Tests"
-        run: pnpm run v:test:ci -- --max-warnings 0
+        run: npm run v:test:ci -- --max-warnings 0
       - name: "Upload Coverage"
         uses: actions/upload-artifact@v4
         with:
@@ -30,12 +27,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - run: pnpm install
+      - run: npm install
       - name: "Run ESLint"
-        run: pnpm run lint
+        run: npm run lint
       # - uses: reviewdog/action-eslint@v1
       #   with:
       #     github_token: ${{ secrets.GITHUB_TOKEN }}
