--- a/.github/workflows/checks.PR.yml
+++ b/.github/workflows/checks.PR.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: 18
       - run: npm install
       - name: "Run Tests"
-        run: npm run v:test:ci -- --max-warnings 0
+        run: npm run v:test:ci
       - name: "Upload Coverage"
         uses: actions/upload-artifact@v4
         with:
