feat: update start script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start:staging": "next start -p 3000",
+    "start:prod": "next start -p 3001",
     "lint": "next lint",
     "lint:fix": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "c:test": "cypress open",
