--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/kinxlo"
   },
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -56,12 +56,12 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
-    "next": "15",
+    "next": "14.2.15",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.7.15",
     "postcss": "8.4.49",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.3.0",
