feat: added chromatic config

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "format:check": "prettier -c -w .",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts,css,less,scss,sass}": [
