--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "postcss": "8.4.49",
     "react": "^18",
     "react-dom": "^18",
+    "react-facebook-pixel": "^1.0.4",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.3.0",
